--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title></title>
         <link rel="stylesheet" href="style.css">
-        <li class="mynavbar"><a href="ABOUT">ABOUT</a></li>
-        <li class="mynavbar"><a href="hobbie">MY HOBBY</a></li>
-      <li class="mynavbar"><a href="favourite">MY FAVOURITE CHARACHTER</a></li>
-        <li class="mynavbar"><a href="works">MY WORKS</a></li>
-        <li class="mynavbar"><a href="contact">CONTACT</a></li>
+        
 
     </head>
 <br><br>
     <body>
-        <script src="style.css"></script>
+        <ul class="menu">
+        <li class="mynavbar"><a href="#ABOUT">ABOUT</a></li>
+        <li class="mynavbar"><a href="#favourite">MY FAVOURITE CHARACTER</a></li>
+        <li class="mynavbar"><a href="#popularity">POPULARITY</a></li>
+        <li class="mynavbar"><a href="#more">ABOUT MY FAVOURITE CHARACHTER</a></li>
+        </ul>
         <br>
         <section id="SECTION1">
             <h1>My Name Is</h1>
